--- a/paga-web-astro/package.json
+++ b/paga-web-astro/package.json
@@ -12,6 +12,7 @@
     "@astrojs/tailwind": "^6.0.2",
     "astro": "^5.11.0",
     "autoprefixer": "^10.4.21",
+    "swiper": "^11.2.10",
     "tailwindcss": "^3.4.17"
   }
 }
