--- a/paga-web-astro/package.json
+++ b/paga-web-astro/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "@astrojs/tailwind": "^6.0.2",
+    "@iconify-json/lucide": "^1.2.57",
     "astro": "^5.11.0",
     "autoprefixer": "^10.4.21",
+    "lucide-astro": "^0.525.0",
     "swiper": "^11.2.10",
     "tailwindcss": "^3.4.17"
   }
