--- a/paga-web-astro/.vscode/settings.json
+++ b/paga-web-astro/.vscode/settings.json
@@ -2,5 +2,6 @@
   "css.validate": true,
   "less.validate": false,
   "scss.validate": false,
-  "css.lint.unknownAtRules": "ignore"
+  "css.lint.unknownAtRules": "ignore",
+  "CodeGPT.apiKey": "Anthropic"
 }
